fix broken css

--- a/unit_8/style.css
+++ b/unit_8/style.css
@@ -155,17 +155,13 @@ a #email {
 }
 
 @media only screen and (max-width: 540px) {
-	ul {
-		width: 100%;
-	}
-
 	li {
 		display: block;
 		width: 100%;
 	}
 
 	li a:hover {
-		background-color: #555
+		background-color: #545454;
 		color: white;
 	}
 }
